@@ -2,6 +2,9 @@
   [Bug Fix]
     * Fixed the following bug "undefined symbol: clock_gettime".
       http://www.cpantesters.org/cpan/report/bd054802-55bd-11ed-9ef0-b2246e8775ea
+  [Support OS]
+    * SPVM::Sys only supports FreeBSD 10+ because the following tests couldn't be fixed.
+      http://www.cpantesters.org/cpan/report/b26888fa-55bd-11ed-9ef0-b2246e8775ea
 0.20 2022-10-27
   [Test Fix]
     * Fixed the testing bug that the test of the getpeername method in the Sys::Socket failed in a different port.
